@@ -11,6 +11,7 @@
 * eWay Gateway: Add support for refunds [duff]
 * Quickpay: Add support for protocols 5 & 6 [twarberg]
 * Banwire gateway: Handle JSON::ParserError [duff]
+* Balanced gateway: Fix unspecified marketplace [duff]
 
 == Version 1.29.3 (December 7, 2012)
 
